--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
-Flask
+click
+Flask~=2.0.2
+itsdangerous
+Jinja2
+MarkupSafe
+pip
+setuptools
+Werkzeug~=2.0.2
+Flask-SQLAlchemy
+Flask-Login
+Flask-Talisman
+pyotp~=2.6.0
+pycryptodome
+SQLAlchemy
+WTForms==3.0.0
+cryptography~=35.0.0
+Flask-WTF
+email-validator==1.1.3
