--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,11 @@ Flask-Login
 Flask-Talisman
 pyotp~=2.6.0
 pycryptodome
-SQLAlchemy
+SQLAlchemy~=1.4.27
 WTForms==3.0.0
 cryptography~=35.0.0
 Flask-WTF
 email-validator==1.1.3
 sshtunnel~=0.4.0
 pymysql
+phonenumbers~=8.12.39
